<?xml version="1.0"?>
<package>
  <name>rbdl</name>
  <version>0.4.0</version>
  <description>
The RBDL is a highly efficient C++ library that contains some essential
rigid body dynamics algorithms such as the Articulated Body Algorithm (ABA)
for forward dynamics, Newton-Euler Algorithm for inverse dynamics and the
Composite Rigid Body Algorithm (CRBA) for the efficient computation of
the joint space inertia matrix. It further contains code for forward and
inverse kinematics and handling of external constraints such as contacts
and collisions.

The code was written by Martin Felis (martin.felis@iwr.uni-heidelberg.de)
and tightly follows the notation used in Roy Featherstone''s book "Rigid
Body Dynamics Algorithm".

This package provides a catkinized version of the library. Changes by
Stefan Kohlbrecher.
    </description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <build_depend>urdf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_checks</build_depend>
  
  <run_depend>urdf</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_checks</run_depend>

</package>
